@@ -10,9 +10,11 @@ import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -30,6 +32,7 @@ import org.springframework.web.bind.annotation.ResponseBody;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
+import kr.or.ddit.company.common.company.service.CompanyServiceImpl;
 import kr.or.ddit.company.payment.payment.service.PaymentServiceImpl;
 import kr.or.ddit.company.payment.payment.service.TossPaymentService;
 import kr.or.ddit.company.payment.product.service.PaymentProductServiceImpl;
@@ -50,20 +53,23 @@ public class PaymentController {
 
 	@Autowired
 	private PaymentProductServiceImpl pservice;
-
+	
+	
 	@PostMapping("/product/change/confirm")
 	@ResponseBody
 	public ResponseEntity<?> changeProduct(@RequestBody Map<String, String> payload) {
 		String oldPaymentNo = payload.get("oldPaymentNo");
 		String newProductNo = payload.get("newProductNo");
 		String billingKey = payload.get("billingKey");
-		String paymentKey = payload.get("paymentKey"); // 추가로 받은 값
-		log.info(" /product/change/confirm 의 oldPaymentNo : {}", oldPaymentNo);
+		String paymentKey = payload.get("paymentKey"); 
+		log.info("/product/change/confirm 의 oldPaymentNo : {}", oldPaymentNo);
 		log.info("/product/change/confirm 의 payload :{} ", payload);
-		// 나머지 기존 로직 동일
+		
+		
 		PaymentVO oldPayment = service.selectPaymentByPk(oldPaymentNo);
-		LocalDate nextStart = LocalDate.parse(oldPayment.getEndDate(), DateTimeFormatter.ofPattern("yyyyMMdd"));
+		LocalDate nextStart = LocalDate.parse(oldPayment.getEndDate(), DateTimeFormatter.ofPattern("yyyyMMdd")).plusDays(1);	
 		LocalDate nextEnd = nextStart.plusMonths(1);
+		
 		log.info("/product/change/confirm 의oldPayment :{}", oldPayment);
 		service.cancelPayment(oldPaymentNo);
 
@@ -75,12 +81,13 @@ public class PaymentController {
 		newPayment.setPaymentMethod("카드");
 		newPayment.setPaymentDate(LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss")));
 		newPayment.setPaymentBillingKey(billingKey);
+		
 		newPayment.setStartDate(nextStart.format(DateTimeFormatter.ofPattern("yyyyMMdd")));
 		newPayment.setEndDate(nextEnd.format(DateTimeFormatter.ofPattern("yyyyMMdd")));
-		newPayment.setStatus("T");
+		newPayment.setStatus("S");
 
 		log.info("newPayment: {}", newPayment);
-		service.insertPayment(newPayment);
+		service.comePayment(newPayment);
 
 		// 성공 응답
 		return ResponseEntity.ok().body("요금제 변경 완료");
@@ -110,79 +117,102 @@ public class PaymentController {
 	}
 
 	@GetMapping("/done/products")
-	public String doun(@RequestParam(value = "filter", required = false) String filter,
-			@RequestParam(value = "page", defaultValue = "1") int page, Model model, Authentication auth) {
-		List<PaymentVO> purchaseList = service.selectMyPaymentList(service.getUserId());
-		Map<String, Integer> productCountMap = new HashMap<>();
-		List<Long> cumulativeAmounts = new ArrayList<>();
-		long totalUsedAmount = 0;
+	public String doun(@RequestParam(value = "filter", required = false, defaultValue = "") String filter,
+	        @RequestParam(value = "page", defaultValue = "1") int page, Model model, Authentication auth) {
+	    
+	    // 구매 목록 가져오기
+	    List<PaymentVO> purchaseList = service.selectMyPaymentList(service.getUserId());
+	    Map<String, Integer> productCountMap = new HashMap<>();
+	    List<Long> cumulativeAmounts = new ArrayList<>();
+	    long totalUsedAmount = 0;
+	    LocalDate now = LocalDate.now();
+	    
+	    log.info("filter의 값 : {}", filter);
 
-		LocalDate now = LocalDate.now();
+	    // 결제 정보 설정
+	    for (PaymentVO payment : purchaseList) {
+	        
+	        LocalDate paymentDate = LocalDate.parse(payment.getPaymentDate(),
+	                DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
 
-		for (PaymentVO payment : purchaseList) {
-			LocalDate paymentDate = LocalDate.parse(payment.getPaymentDate(),
-					DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
+	        long daysLeft = 30 - ChronoUnit.DAYS.between(paymentDate, now);
 
-			long daysLeft = 30 - ChronoUnit.DAYS.between(paymentDate, now);
+	        List<PaymentProductVO> productList = pservice.selectPaymentProductListByPk(payment.getProductNo());
 
-			List<PaymentProductVO> productList = pservice.selectPaymentProductListByPk(payment.getProductNo());
+	        if (productList == null) {
+	            productList = new ArrayList<>();
+	        }
 
-			for (PaymentProductVO product : productList) {
-				product.setDaysRemaining((int) daysLeft);
-			}
+	        for (PaymentProductVO product : productList) {
+	            product.setDaysRemaining((int) daysLeft);
+	        }
 
-			payment.setPaymentProductList(productList);
-			payment.setStartDate(paymentDate.toString());
-			payment.setEndDate(paymentDate.plusDays(30).toString());
+	        payment.setPaymentProductList(productList);
+	        payment.setStartDate(paymentDate.toString());
+	        payment.setEndDate(paymentDate.plusDays(30).toString());
+	        log.info("payment 는 잘나오나 : {}", payment);
+	    }
 
-		}
+	    // 필터링된 리스트
+	    List<PaymentVO> filteredList = purchaseList;
 
-		List<PaymentVO> filteredList = purchaseList;
+	    // "expired" 필터링: 사용 기간 만료
+	    if ("expired".equals(filter)) {
+	        filteredList = purchaseList.stream()
+	                .filter(p -> p.getPaymentProductList().stream().allMatch(prod -> prod.getDaysRemaining() <= 0))
+	                .collect(Collectors.toList());
+	        log.info("Filtered expired products, filteredList size : {}", filteredList.size());
 
-		if ("expired".equals(filter)) {
-			filteredList = purchaseList.stream()
-					.filter(p -> p.getPaymentProductList().stream().allMatch(prod -> prod.getDaysRemaining() <= 0))
-					.toList();
-		} else if ("active".equals(filter)) {
-			filteredList = purchaseList.stream()
-					.filter(p -> p.getPaymentProductList().stream().allMatch(prod -> prod.getDaysRemaining() > 0))
-					.toList();
-		}
-		if (List.of("A", "E", "S", "C").contains(filter)) {
-		    filteredList = purchaseList.stream()
-		            .filter(p -> filter.equals(p.getStatus()))
-		            .toList();
-		} 
+	    // "active" 필터링: 사용 기간이 남은 상품
+	    } else if ("active".equals(filter)) {
+	        filteredList = purchaseList.stream()
+	                .filter(p -> p.getPaymentProductList().stream().anyMatch(prod -> prod.getDaysRemaining() > 0))
+	                .collect(Collectors.toList());
+	        log.info("Filtered active products, filteredList size: {}", filteredList.size());
 
-		for (PaymentVO payment : filteredList) {
-			for (PaymentProductVO product : payment.getPaymentProductList()) {
-				productCountMap.merge(product.getProductName(), 1, Integer::sum);
-			}
-			totalUsedAmount += Long.parseLong(payment.getPaymentPay());
-			cumulativeAmounts.add(totalUsedAmount);
-		}
+	    // "A", "S", "E", "C" 필터링: status 값에 따라
+	    } else if (List.of("A", "S", "E", "C").contains(filter)) {
+	        filteredList = purchaseList.stream()
+	                .filter(p -> filter.equals(p.getStatus()))
+	                .collect(Collectors.toList());
+	        log.info("Filtered by status '{}', filteredList size: {}", filter, filteredList.size());
+	    }
+	    
+	    // startDate 기준 빠른순서부터
+	    filteredList.sort(Comparator.comparing(PaymentVO::getStartDate));
 
-		int pageSize = 10;
-		int totalItems = filteredList.size();
-		int totalPages = (int) Math.ceil((double) totalItems / pageSize);
-		int offset = (page - 1) * pageSize;
+	    // 필터링 후 누적 금액과 상품 수 계산
+	    for (PaymentVO payment : filteredList) {
+	        for (PaymentProductVO product : payment.getPaymentProductList()) {
+	            if (product.getProductName() != null) {
+	                productCountMap.merge(product.getProductName(), 1, Integer::sum);
+	            }
+	        }
+	        totalUsedAmount += Long.parseLong(payment.getPaymentPay());
+	        cumulativeAmounts.add(totalUsedAmount);
+	    }
 
-		List<PaymentVO> pageList = filteredList.stream().skip(offset).limit(pageSize).toList();
+	    // 페이징 처리
+	    int pageSize = 10;
+	    int totalItems = filteredList.size();
+	    int totalPages = (int) Math.ceil((double) totalItems / pageSize);
+	    int offset = (page - 1) * pageSize;
 
-		List<Long> pageCumulativeAmounts = cumulativeAmounts.subList(offset,
-				Math.min(offset + pageSize, cumulativeAmounts.size()));
+	    List<PaymentVO> pageList = filteredList.stream().skip(offset).limit(pageSize).collect(Collectors.toList());
+	    List<Long> pageCumulativeAmounts = cumulativeAmounts.subList(offset, Math.min(offset + pageSize, cumulativeAmounts.size()));
 
-		model.addAttribute("purchaseList", pageList); // ⬅️ 페이징된 리스트
-		model.addAttribute("cumulativeList", pageCumulativeAmounts); // ⬅️ 순차 누적 금액
-		model.addAttribute("productCountMap", productCountMap);
-		model.addAttribute("totalUsedAmount", totalUsedAmount);
-		model.addAttribute("selectedFilter", filter);
-		model.addAttribute("totalPages", totalPages);
-		model.addAttribute("currentPage", page);
+	    // 모델에 데이터 추가
+	    model.addAttribute("purchaseList", pageList); // ⬅️ 페이징된 리스트
+	    model.addAttribute("cumulativeList", pageCumulativeAmounts); // ⬅️ 순차 누적 금액
+	    model.addAttribute("productCountMap", productCountMap); // ⬅️ 상품별 수량
+	    model.addAttribute("totalUsedAmount", totalUsedAmount); // ⬅️ 총 사용 금액
+	    model.addAttribute("selectedFilter", filter); // ⬅️ 선택된 필터 값
+	    model.addAttribute("totalPages", totalPages); // ⬅️ 전체 페이지 수
+	    model.addAttribute("currentPage", page); // ⬅️ 현재 페이지
 
-		log.info("결제 내역(필터 : {}) : {}", filter, filteredList);
+	    log.info("결제 내역(필터 : {}) : {}", filter, filteredList);
 
-		return "company/payment/paymentlist/PaymentDoneList";
+	    return "company/payment/paymentlist/PaymentDoneList";
 	}
 
 	@GetMapping("/buydetail")
@@ -209,7 +239,8 @@ public class PaymentController {
 				log.info("결제 번호 : {}, 상태 : {}", p.getPaymentNo(), p.getStatus());
 			}
 		}
-		List<PaymentVO> purchaseList = fullList.stream().filter(p -> "A".equalsIgnoreCase(p.getStatus())).toList();
+//		 활성화 된거랑 활성화 예정만 보여줌
+		List<PaymentVO> purchaseList = fullList.stream().filter(p -> "A".equalsIgnoreCase(p.getStatus()) || "C".equalsIgnoreCase(p.getStatus())).toList();
 
 		for (PaymentVO payment : purchaseList) {
 			LocalDate paymentDate = LocalDate.parse(payment.getPaymentDate(),
@@ -227,6 +258,19 @@ public class PaymentController {
 
 		model.addAttribute("purchaseList", purchaseList);
 		log.info("purchaseList : {}", purchaseList);
+		
+//		Optional<PaymentVO> purchaseList = fullList.stream()
+//			    .filter(p -> "A".equalsIgnoreCase(p.getStatus()) || "C".equalsIgnoreCase(p.getStatus())) // "A"와 "C" 상태 필터링
+//				.max(Comparator.comparing(PaymentVO::getEndDate));
+//		
+//		if(purchaseList.isPresent()) {
+//			model.addAttribute("purchaseList", List.of(purchaseList.get()));
+//			
+//		}else {
+//			model.addAttribute("purchaseList",List.of());
+//		}
+		
+		
 		return "company/payment/payment/PaymentMain";
 	}
 
@@ -310,6 +354,8 @@ public class PaymentController {
 
 				service.insertPayment(vo);
 				log.info("insert에 들어갈 값 : {}", vo);
+				service.updateComPaymentStatus(vo);
+				log.info("update 한 후 : {}",vo);
 			}
 		} else {
 			log.info("겔제응답이 없ㅇ름");
